--- a/man/pointingstick.man
+++ b/man/pointingstick.man
@@ -35,7 +35,7 @@ driver.
 1 boolean value (8 bit, 0 or 1).
 .TP 7
 .BI "PointingStick Press to Select Threshold"
-1 8-bit value positive value.
+1 8-bit positive value.
 
 .SH SEE ALSO
 __xservername__(__appmansuffix__), __xconfigfile__(__filemansuffix__), Xserver(__appmansuffix__), X(__miscmansuffix__)
